--- a/index.html
+++ b/index.html
@@ -3,21 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Fuentes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Darumadrop+One&family=Iansui&family=Karla:ital,wght@0,200..800;1,200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Ponomar&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&family=Special+Gothic+Expanded+One&family=Triodion&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="./css/style.css">
     <title>Web Hosting Service</title>
+
+   
+
 </head>
 <body>
  <div class="container-grid">
 
     <header class="frente">
      <div class="container-frente">
-      <img src="./assets/logo.jpg" class="logo">
+      <img src="./assets/logoriginal.png" class="logo">
       <span class="menu-icon"><img src="/assets/menuicon.png"></span>
       <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Catalogo</a></li>
+            <li><a href="#">Nosotros</a></li>
+            <li><a href="#">Clientes</a></li>
+            <li><a href="#">Contacto</a></li>
         </ul>
       </nav>
       </div> 
@@ -25,6 +34,14 @@
     
     <main>
       <section class="frontprin">
+        <h2>Somos El cantaro</h2>
+        <h2>Limpieza</h2>
+        <p>Te ofrecemos trapos y paños seleccionados para uso profesional: resistentes, absorbentes y listos para el trabajo exigente de talleres, industrias y comercios.</p>
+        <p>Descubrí nuestros productos y sumá calidad a tu rutina.</p>
+      </section>
+
+      <section class="frontsecu">
+
       </section>
 
 
