--- a/index.html
+++ b/index.html
@@ -100,20 +100,21 @@
   
   
   <div id="contactoss"></div> 
-  <!-- Contacto -->
-  <section class="contacto" >
-    <div class="container contacto-content">
-      <img src="./assets/logoriginal.png" alt="Logo EC" class="logo-contacto">
-      <div class="containercontact">
-       <h2>Contáctanos</h2>
-       <ul>
-         <li>📧 pablito93@gmail.com</li>
-         <li>📞 ‪+54 11 3362-5460‬</li>
-       </ul>
-      </div>
-    </div>
-    <h3>El Cantaro Limpiza</h3>
-  </section>
+<section class="containercontactos">
+  <div class="contacto">
+     <img src="./assets/logoriginal.png" alt="Logo EC" class="logo-contacto">
+     <div class="containercomt">
+     <h2>Contáctanos</h2>
+         <ul>
+           <li>📧 pablito93@gmail.com</li>
+           <li>📞 +54 11 3362-5460</li>
+         </ul>
+     </div>
+  </div> 
+  <h3 class="ultimotitulo">El Cantero Limpieza</h3>
+</section>
+
+
 
   <!-- Footer -->
   <footer class="footer">
