--- a/index.html
+++ b/index.html
@@ -103,23 +103,39 @@
 <section class="containercontactos">
   <div class="contacto">
      <img src="./assets/logoriginal.png" alt="Logo EC" class="logo-contacto">
-     <div class="containercomt">
+     <div class="containercont">
      <h2>Contáctanos</h2>
-         <ul>
-           <li>📧 pablito93@gmail.com</li>
-           <li>📞 +54 11 3362-5460</li>
-         </ul>
+     <div class="listacontactos">
+      <p>📧 pablito93@gmail.com</p>
+      <p>📞 +54 11 3362-5460</p>
      </div>
+        
   </div> 
-  <h3 class="ultimotitulo">El Cantero Limpieza</h3>
+  
 </section>
 
 
 
   <!-- Footer -->
-  <footer class="footer">
-    <p>© Todos los derechos reservados</p>
-  </footer>
+  <footer>
+    <div class="footer-container">
+        <div class="footer-logo">
+            <img src="./assets/logoblanco.png" alt="Logo El Cántaro">
+            <p>El Cántaro Limpieza</p>
+        </div>
+
+        <ul class="footer-links">
+            <li><a href="#front">Inicio</a></li>
+            <li><a href="#productoss">Catálogo</a></li>
+            <li><a href="#nosotross">Nosotros</a></li>
+            <li><a href="#contactoss">Contacto</a></li>
+        </ul>
+
+        <div class="footer-credit">
+            Creado por Thomas Aguirre, Matias Rinaldi y Thiago Romeo
+        </div>
+    </div>
+</footer>
 
 
 </body>
