Pagina a punto de lanzarse (falta SEO)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>El Cántaro Limpieza | Pagina oficial</title>
   <link rel="stylesheet" href="./css/style.css"/>
 
+  <!--Icono-->
+   <link rel="icon" href="./assets/logoblanco.png" type="image/x-icon">
+
   <!--Animaciones-->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   
@@ -46,11 +49,9 @@
     </div>  
   </section>
 
- 
   <!-- Catálogo -->
  <section class="frontsecu" id="productoss">
   <h2 data-aos="zoom-in">Conoce nuestros <br>productos</h2>
-
   <div class="catalogo-box" >
     <a href="./assets/Catalogo.pdf" download="Catalogo-El-Cantaro">
       <button>
@@ -58,7 +59,6 @@
       </button>
     </a> 
   </div>
-
   <div class="productos-imgs" data-aos="zoom-in">
     <div class="producto">
       <img src="assets/trapo1.png" alt="Producto 1">
@@ -70,13 +70,10 @@
       <img src="assets/trapo3.png" alt="Producto 3">
     </div>
   </div>
-
   <p class="industria" data-aos="zoom-in">100% Industria Argentina</p>
 </section>
 
-  
   <!-- Nosotros -->
-
   <section class="nosotros" id="nosotross">
     <div class="container" >
       <h2 data-aos="zoom-in">Sobre Nosotros</h2>
@@ -93,35 +90,17 @@
     </div>
   </section>
 
- 
-  <!-- Clientes -->
-  <!--<section class="clientes" id="clientes">
-    <div class="container">
-      <h2>Clientes principales</h2>
-      <div class="logos-clientes">
-        <img src="img/cliente1.png" alt="Química Morón">
-        <img src="img/cliente2.png" alt="Cromax">
-      </div>
-    </div>
-  </section>-->
-  
-  
-
 <section class="containercontactos" id="contactoss">
   <div class="contacto">
      <img src="./assets/logoriginal.png" alt="Logo EC" class="logo-contacto"  data-aos-duration="1000" data-aos="zoom-out">
      <div class="containercont" >
      <h2 data-aos="zoom-out" >Contáctanos</h2>
      <div class="listacontactos" data-aos="fade-up" >
-      <p >ventas@elcantarolimpieza.com </p>
-      <p>+54 11 3362-5460 </p>
+      <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=ventas@elcantarolimpieza.com" target="_blank"><img src="./assets/logoemail.png" class="imgcontactos"></a> ventas@elcantarolimpieza.com </p>
+      <p><a href="https://wa.me/541133625460?text=Hola,%20quiero%20más%20información" target="_blank"><img src="./assets/logowatsapp.png" class="imgcontactos"></a>+54 11 3362-5460 </p>
      </div>
-        
   </div> 
-  
 </section>
-
-
 
   <!-- Footer -->
   <footer>
@@ -130,14 +109,12 @@
             <img src="./assets/logoblanco.png" alt="Logo El Cántaro">
             <p>El Cántaro Limpieza</p>
         </div>
-
         <ul class="footer-links">
             <li><a href="#front">Inicio</a></li>
             <li><a href="#productoss">Catálogo</a></li>
             <li><a href="#nosotross">Nosotros</a></li>
             <li><a href="#contactoss">Contacto</a></li>
         </ul>
-
         <div class="footer-credit">
             Creado por 
             <a href="https://ventum.myportfolio.com/" target="_blank">Thomas Aguirre</a>,
@@ -146,7 +123,6 @@
         </div>
     </div>
 </footer>
-
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
