Ultimo movimientos antes de lanzar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>El Cántaro Limpieza | Pagina oficial</title>
+  <meta name="description" content="Tienda mayorista dedicada a la venta de trapos y paños seleccionados para uso profesional: resistentes, absorbentes y listos para el trabajo exigente.">
+  <meta name="keywords" content="venta mayorista de trapos, trapos y paños industriales, trapos para limpieza profesional, paños absorbentes para talleres, trapos resistentes para industria, paños de algodón para limpieza, proveedor mayorista de trapos, trapos para fábricas y comercios, trapos para talleres mecánicos, trapos para limpieza industrial, trapos absorbentes para uso profesional, venta de trapos por mayor, trapos para pulido y mantenimiento, paños para limpieza de maquinaria, trapos de tela reciclada, trapos de algodón económicos, trapos para limpieza pesada, paños para industria automotriz, trapos para talleres de carpintería, trapos para limpieza de vidrios, El Cántaro Limpieza, trapos mayoristas Argentina, venta mayorista de trapos Buenos Aires, paños industriales en Argentina, proveedor de trapos para empresas">
+
+  <title>El Cántaro Limpieza | Página oficial de venta mayorista de trapos y paños</title></title>
   <link rel="stylesheet" href="./css/style.css"/>
 
   <!--Icono-->
@@ -16,7 +19,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Darumadrop+One&family=Iansui&family=Karla:ital,wght@0,200..800;1,200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Ponomar&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&family=Special+Gothic+Expanded+One&family=Triodion&display=swap" rel="stylesheet">
-    
 </head>
 <body>
 
@@ -84,7 +86,7 @@
         <br><br>
         A lo largo de los años, la empresa fue creciendo en variedad y volumen, incorporando nuevos productos y mejorando los procesos de selección de telas. Su foco siempre estuvo en escuchar las necesidades de los clientes y mantener la calidad como sello distintivo.
         <br><br>
-        Hoy, Elcántaro Limpieza se reconoce por su especialización en trapos y paños, convirtiéndose en un aliado confiable para industrias y comercios que buscan eficiencia y practicidad en sus tareas de limpieza..  
+        Hoy, El Cántaro Limpieza se reconoce por su especialización en trapos y paños, convirtiéndose en un aliado confiable para industrias y comercios que buscan eficiencia y practicidad en sus tareas de limpieza. 
       </p>
       <img src="./assets/logoriginal.png" alt="EC Mini" class="ec-mini" data-aos="zoom-in-up">
     </div>
@@ -93,7 +95,7 @@
 <section class="containercontactos" id="contactoss">
   <div class="contacto">
      <img src="./assets/logoriginal.png" alt="Logo EC" class="logo-contacto"  data-aos-duration="1000" data-aos="zoom-out">
-     <div class="containercont" >
+     <div class="containercont">
      <h2 data-aos="zoom-out" >Contáctanos</h2>
      <div class="listacontactos" data-aos="fade-up" >
       <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=ventas@elcantarolimpieza.com" target="_blank"><img src="./assets/logoemail.png" class="imgcontactos"></a> ventas@elcantarolimpieza.com </p>
