Pagina casi finalizada

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
      <div class="containercont">
      <h2 data-aos="zoom-out" >Contáctanos</h2>
      <div class="listacontactos" data-aos="fade-up" >
-      <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=ventas@elcantarolimpieza.com" target="_blank"><img src="./assets/logoemail.png" class="imgcontactos"></a> ventas@elcantarolimpieza.com </p>
-      <p><a href="https://wa.me/541133625460?text=Hola,%20quiero%20más%20información" target="_blank"><img src="./assets/logowatsapp.png" class="imgcontactos"></a>+54 11 3362-5460 </p>
+      <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=ventas@elcantarolimpieza.com" target="_blank"><img src="./assets/logoemail.png" class="imgcontactos" alt="icono de gmail"></a> ventas@elcantarolimpieza.com </p>
+      <p><a href="https://wa.me/541133625460?text=Hola,%20quiero%20más%20información" target="_blank"><img src="./assets/logowatsapp.png" class="imgcontactos" alt="icono de whatsapp"></a>+54 11 3362-5460 </p>
      </div>
   </div> 
 </section>
